FIXED - spacing and styling, card values and first load of grant page scheme show

--- a/styles/style.css
+++ b/styles/style.css
@@ -5371,10 +5371,10 @@ button {
   }
 }
 
-.lastcon a{
+/* .lastcon a{
   text-decoration: none;
   color: #000;
-}
+} */
 /*-----------------resource page  css---------*/
 
 .s2head1 {
